--- a/style.css
+++ b/style.css
@@ -437,6 +437,7 @@ nav a:hover{
     .drainage-container{
       grid-template-columns: repeat(2,1fr);
       padding: 5%;
+      gap: 10px;
 
     }
   }
