--- a/style.css
+++ b/style.css
@@ -1,25 +1,24 @@
-:root{
-    --primary:#DFAA46;
+:root {
+  --primary: #dfaa46;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Roboto", sans-serif;
-    scroll-behavior: smooth;
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  scroll-behavior: smooth;
 }
 
-html,body{
-    width: 100%;
-    height: 100%;
+html,
+body {
+  width: 100%;
+  height: 100%;
 }
 
-.heading{
-    font-family: "Teko",sans-serif;
+.heading {
+  font-family: "Teko", sans-serif;
 }
-
 
 #hamburger.active span:nth-child(1) {
   transform: rotate(45deg) translate(6px, 6px);
@@ -37,496 +36,567 @@ html,body{
   transform: translateY(0);
 }
 
-
-nav a{
-    color: white;
-    text-transform: uppercase;
-    transition: all 0.3s;
-    font-size: 14px;
+nav a {
+  color: white;
+  text-transform: uppercase;
+  transition: all 0.3s;
+  font-size: 14px;
 }
 
-nav a:hover{
-    color: #DFAA46;
+nav a:hover {
+  color: #dfaa46;
 }
 
-.book-online{
-    background: var(--primary);
-    border: 1px solid var(--primary);
-    padding: 10px 20px;
-    color: white;
-    transition: all 0.3s;
-    font-size: 14px;
-    text-shadow: none;
-    border-radius: 6px;
-    background-image: linear-gradient(to right, var(--primary) 0%, rgb(228 204 146) 51%, var(--primary) 100%);
-    background-size: 200% auto;
-    text-transform: uppercase;
+.book-online {
+  background: var(--primary);
+  border: 1px solid var(--primary);
+  padding: 10px 20px;
+  color: white;
+  transition: all 0.3s;
+  font-size: 14px;
+  text-shadow: none;
+  border-radius: 6px;
+  background-image: linear-gradient(
+    to right,
+    var(--primary) 0%,
+    rgb(228 204 146) 51%,
+    var(--primary) 100%
+  );
+  background-size: 200% auto;
+  text-transform: uppercase;
 }
 
-.book-online:hover{
-    background-image: linear-gradient(to right, var(--primary) 51%, rgb(228 204 146) 0%, var(--primary) 100%);   
+.book-online:hover {
+  background-image: linear-gradient(
+    to right,
+    var(--primary) 51%,
+    rgb(228 204 146) 0%,
+    var(--primary) 100%
+  );
 }
 
-.hero{
-    background: url(./images/hero-img.jpeg)  no-repeat;
-    background-size: cover;
-    background-position:top ;
-    position: relative;
+.hero {
+  background: url(./images/hero-img.jpeg) no-repeat;
+  background-size: cover;
+  background-position: top;
+  position: relative;
 }
 
-.hero-overlay{
+.hero-overlay {
   position: absolute;
   top: 0;
   height: 100%;
   width: 100%;
-  background: rgba(0,0,0,0.3);
+  background: rgba(0, 0, 0, 0.3);
 }
 
-.second img{
+.second img {
   height: 400px;
   width: 400px;
 }
 
-
-.img-container{
-    position: relative;
-    height: 230px;
+.img-container {
+  position: relative;
+  height: 230px;
 }
 
-.card{
-    background-color: #fff;
+.card {
+  background-color: #fff;
 }
 
-
-.card-image{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+.card-image {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
-.card-svg{
-    position: absolute;
-    bottom: -50px;
-    right: 20px;
-    padding: 25px;
-    border-radius: 10px;
+.card-svg {
+  position: absolute;
+  bottom: -50px;
+  right: 20px;
+  padding: 25px;
+  border-radius: 10px;
 }
-.card-content{
-    margin-top: 40px;
-    padding: 20px 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-}
-
-.card-title{
-    opacity: 80%;
-    font-size: 36px;
-    text-transform: uppercase;
+.card-content {
+  margin-top: 40px;
+  padding: 20px 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
 }
 
-.card-p{
-    height: 300px;
-    line-height: 2rem;
+.card-title {
+  opacity: 80%;
+  font-size: 36px;
+  text-transform: uppercase;
 }
 
-.card-btn{
-    color: var(--primary);
-    padding: 10px 20px;
-    border: 1px solid var(--primary);
-    transition: all 0.3s ease;
-    border-radius: 6px;
+.card-p {
+  height: 300px;
+  line-height: 2rem;
 }
 
-.card-btn:hover{
-    background-color: var(--primary);
-    color: white;
+.card-btn {
+  color: var(--primary);
+  padding: 10px 20px;
+  border: 1px solid var(--primary);
+  transition: all 0.3s ease;
+  border-radius: 6px;
 }
 
-.phone{
-    fill: var(--primary);
+.card-btn:hover {
+  background-color: var(--primary);
+  color: white;
 }
 
-.card-btn:hover .phone{
-    fill: white;
+.phone {
+  fill: var(--primary);
 }
 
-.img-2{
-    position: relative;
-    z-index: 10;
-    filter: brightness(0) invert(1);
+.card-btn:hover .phone {
+  fill: white;
 }
 
-.g-wrapper svg{
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    padding: 1px;
-    margin: 0 0 0 4px;
-    background: #fff;
-    border-radius: 50%;
+.img-2 {
+  position: relative;
+  z-index: 10;
+  filter: brightness(0) invert(1);
 }
 
+.g-wrapper svg {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  padding: 1px;
+  margin: 0 0 0 4px;
+  background: #fff;
+  border-radius: 50%;
+}
 
+.left h5 {
+  margin: 0;
+  font-size: 26px;
+  font-weight: 700;
+}
 
-  .left h5 {
-    margin: 0;
-    font-size: 26px;
-    font-weight: 700;
+.left-text {
+  font-family: "Futura", sans-serif;
+  margin: 0;
+  font-size: 17px;
+  opacity: 80%;
+}
+
+.left {
+  width: 30%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
+.star {
+  /* margin-top: 9px; */
+  /* display: inline-block; */
+}
+
+.right {
+  position: relative;
+  width: 70%;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  /* text-align: center; */
+}
+
+.left-text {
+  text-align: center;
+}
+
+.reviews {
+  overflow-x: hidden;
+  padding: 0 12%;
+  display: flex;
+  gap: 20px;
+}
+
+.slide-content {
+  padding: 10px;
+  color: black;
+  background-color: #fafafa;
+}
+
+.swiper-container {
+  width: 100%;
+  overflow: hidden;
+}
+
+.review-first {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+
+.date {
+  font-family: sans-serif;
+  font-size: 12px;
+}
+
+.svg {
+  width: 90px;
+}
+
+.review-sec {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.title {
+  margin-top: 5px;
+  font-size: 14px;
+  /* font-weight: 700; */
+  opacity: 90%;
+}
+
+.review-forth {
+  display: flex;
+  align-items: center;
+}
+
+.review-fifth {
+  margin-top: 5px;
+  font-size: 14px;
+}
+
+.review-sixth {
+  margin-top: 5px;
+  opacity: 80%;
+  font-size: 12px;
+  font-family: sans-serif;
+}
+
+.custom-swiper-button {
+  display: block;
+  background-color: white;
+  border: 1px solid grey;
+  border-radius: 30rem;
+  color: grey !important;
+  font-size: 12px !important;
+}
+
+.swiper-button-prev {
+  position: absolute;
+  left: -20px !important;
+  top: 40% !important;
+}
+
+.swiper-button-next {
+  top: 40% !important;
+  right: -20px !important;
+}
+
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  font-size: 12px !important;
+  border-radius: 50% !important;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  height: 25px !important;
+  width: 25px !important;
+}
+
+.service-list li a {
+  color: var(--primary);
+  border-top: 1px solid var(--primary);
+  font-size: 18px;
+}
+
+.last-li a {
+  border-bottom: 1px solid var(--primary);
+}
+
+label {
+  color: #ebc888;
+  display: block;
+  margin-bottom: 5px;
+  font-weight: 500;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+select,
+textarea {
+  width: 100%;
+  padding: 10px !important;
+  margin-bottom: 15px;
+  border: 1px solid #cccccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+input[type="submit"] {
+  background-color: #007bff;
+  color: #ffffff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  width: 100%;
+}
+
+input[type="radio"] {
+  scale: 1.2;
+}
+
+input[type="submit"]:hover {
+  background-color: #0056b3;
+}
+
+footer ul li a {
+  color: white;
+  transition: all 0.2s;
+}
+footer ul li {
+  color: white;
+  transition: all 0.2s;
+}
+footer ul li a:hover {
+  color: var(--primary);
+}
+footer ul li:hover {
+  color: var(--primary);
+}
+
+@media screen and (max-width: 600px) {
+  form {
+    width: 90%;
   }
-
-  .left-text {
-    font-family: "Futura", sans-serif;
-    margin: 0;
-    font-size: 17px;
-    opacity: 80%;
+  .card-p {
+    height: inherit;
   }
+}
 
-  .left {
-    width: 30%;
-    padding: 1rem;
-    display: flex;
+@media (max-width: 1024px) {
+  .reviews {
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 5px;
-  }
-
-  .star{
-    /* margin-top: 9px; */
-    /* display: inline-block; */
+    padding: 0 3%;
   }
 
   .right {
+    margin-top: 10px;
+    width: 100%;
     position: relative;
-    width: 70%;
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
-    /* text-align: center; */
+    /* padding: 0.5rem; */
   }
 
-  .left-text {
-    text-align: center;
-  }
-
-  .reviews {
-    overflow-x: hidden;
-    padding: 0 12%;
-    display: flex;
-    gap: 20px;
-  }
-
-  .slide-content {
-    padding: 10px;
-    color: black;
-    background-color: #FAFAFA;
+  .left {
+    width: 100%;
+    gap: 10px;
   }
 
   .swiper-container {
+    overflow: visible;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .slide-content {
     width: 100%;
-    overflow: hidden;
-  }
-
-  .review-first {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-  }
-
-  .date {
-    font-family: sans-serif;
-    font-size: 12px;
-  }
-
-  .svg {
-    width: 90px;
-  }
-
-  .review-sec {
-    margin-top: 10px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-
-
-  .title {
-    margin-top: 5px;
-    font-size: 14px;
-    /* font-weight: 700; */
-    opacity: 90%;
-  }
-
-  .review-forth{
-    display: flex; align-items: center;
-  }
-
-  .review-fifth {
-    margin-top: 5px;
-    font-size: 14px;
-  }
-
-  .review-sixth {
-    margin-top: 5px;
-    opacity: 80%;
-    font-size: 12px;
-    font-family: sans-serif;
   }
 
   .custom-swiper-button {
-    display: block;
-    background-color: white;
-    border: 1px solid grey;
-    border-radius: 30rem;
-    color: grey !important;
-    font-size: 12px !important;
+    display: none !important;
   }
+}
 
-  .swiper-button-prev {
-    position: absolute;
-    left: -20px !important;
-    top: 40% !important;
-  }
+/* Drainage */
 
-  .swiper-button-next {
-    top: 40% !important;
-    right: -20px !important;
-  }
+.drainage-container {
+  padding: 5% 10%;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 20px;
+}
 
-  .swiper-button-next:after, .swiper-button-prev:after {
-    font-size: 12px !important;
-    border-radius: 50% !important;
-  }
+.drainage-card {
+  padding: 10px 20px;
+  border-top: 4px solid var(--primary);
+  border-bottom: 1px solid black;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+}
 
-  .swiper-button-next, .swiper-button-prev {
-    height: 25px !important;
-    width: 25px !important;
-  }
-
-  .service-list li a{
-    color: var(--primary);
-    border-top: 1px solid var(--primary);
-    font-size: 18px;
-  }
-
-  .last-li a {
-    border-bottom: 1px solid var(--primary);
-
-  }
-
-  label {
-    color: #ebc888;
-    display: block;
-    margin-bottom: 5px;
-    font-weight: 500;
-  }
-
-  input[type="text"],
-  input[type="email"],
-  input[type="tel"],
-  select,
-  textarea {
-    width: 100%;
-    padding: 10px !important;
-    margin-bottom: 15px;
-    border: 1px solid #cccccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-  }
-
-  input[type="submit"] {
-    background-color: #007bff;
-    color: #ffffff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    width: 100%;
-  }
-
-  input[type="radio"]{
-    scale: 1.2;
-  }
-
-  input[type="submit"]:hover {
-    background-color: #0056b3;
-  }
-
-  footer ul li a {
-    color: white;
-    transition: all 0.2s;
-
-  }
-  footer ul li {
-    color: white;
-    transition: all 0.2s;
-  }
-  footer ul li a:hover {
-    color: var(--primary);
-  }
-  footer ul li:hover {
-    color: var(--primary);
-  }
-
-  @media screen and (max-width: 600px) {
-    form {
-      width: 90%;
-    }
-    .card-p{
-      height: inherit;
-    }
-  }
-
-  @media (max-width: 1024px) {
-    .reviews {
-      flex-direction: column;
-      align-items: center;
-      padding: 0 3%;
-    }
-
-    .right {
-      margin-top: 10px;
-      width: 100%;
-      position: relative;
-      /* padding: 0.5rem; */
-    }
-
-    .left {
-      width: 100%;
-      gap: 10px;
-    }
-
-    .swiper-container {
-      overflow: visible;
-      width: 80%;
-      margin-left: auto;
-      margin-right: auto
-    }
-
-    .slide-content{
-      width: 100%;
-    }
-
-    .custom-swiper-button{
-      display: none !important;
-    }
-  }
-
-  /* Drainage */
-
-  .drainage-container{
-    padding: 5% 10%;
-    display: grid;
-    grid-template-columns: repeat(5,1fr);
-    gap: 20px;
-  }
-
-  .drainage-card{
-    padding: 10px 20px;
-    border-top: 4px solid var(--primary) ;
-    border-bottom: 1px solid black;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-  }
-
-  @media screen and (max-width: 600px) {
-    .drainage-container{
-      grid-template-columns: repeat(1,1fr);
-      padding: 5%;
-      gap: 10px;
-
-    }
-  }
-  @media (min-width:641px) and (max-width: 1023px) {
-    .drainage-container{
-      grid-template-columns: repeat(3,1fr);
-    }
-  }
-
-
-  /* Drainage Ends */
-
-  /* Plumbing  */
-
-  .plumbing-list{
-    margin-top: 30px;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    gap: 20px;
-  } 
-
-  .plumbing-list li{
-    display: flex;
-    align-items: center;
+@media screen and (max-width: 600px) {
+  .drainage-container {
+    grid-template-columns: repeat(1, 1fr);
+    padding: 5%;
     gap: 10px;
   }
-
-  @media screen and (max-width: 600px) {
-    .plumbing-list{
-      grid-template-columns: repeat(1,1fr);
-    }
+}
+@media (min-width: 641px) and (max-width: 1023px) {
+  .drainage-container {
+    grid-template-columns: repeat(3, 1fr);
   }
+}
 
-  /* Plumbing Ends  */
+/* Drainage Ends */
 
-  /* About */
+/* Plumbing  */
 
-  .about-company{
-    background: url(./images/our-story.png) no-repeat;
-    background-size: contain;
-    background-position: 50% 6%;
+.plumbing-list {
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.plumbing-list li {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+@media screen and (max-width: 600px) {
+  .plumbing-list {
+    grid-template-columns: repeat(1, 1fr);
   }
+}
 
-  .about-card{
-    display: flex;
-    gap: 50px;
-  }
+/* Plumbing Ends  */
 
-  .about-img-container{
-    border: 1px solid black;
-  }
+/* About */
 
-  .about-img{
-    position: relative;
-    left: 10px;
-    top: 10px;
-  }
+.about-company {
+  background: url(./images/our-story.png) no-repeat;
+  background-size: contain;
+  background-position: 50% 6%;
+}
 
-  .about-content{
-    display: flex;
+.about-card {
+  display: flex;
+  gap: 50px;
+}
+
+.about-img-container {
+  border: 1px solid black;
+}
+
+.about-img {
+  position: relative;
+  left: 10px;
+  top: 10px;
+}
+
+.about-content {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: start;
+  gap: 10px;
+}
+
+.about-svg {
+  border-radius: 10px;
+}
+
+.about-heading {
+  font-size: 42px;
+  color: var(--primary);
+}
+
+.about-para {
+  line-height: 2rem;
+}
+
+@media screen and (max-width: 600px) {
+  .about-card {
     flex-direction: column;
-    align-items: start;
-    justify-content: start;
-    gap: 10px;
   }
+}
 
-  .about-svg{
-    border-radius: 10px;
+/* Meet The Team */
+
+.founder-imgs {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.meet-banner {
+  background: url(./images/meet-banner.jpeg) no-repeat;
+  background-size: contain;
+  background-position: 50% 24%;
+}
+
+.team-section {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.team-card {
+  position: relative;
+  width: 350px;
+  height: 400px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease;
+  cursor: pointer;
+}
+
+.team-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.team-card .card-content {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  padding: 20px;
+  transform: translateY(100%);
+  transition: transform 0.3s ease;
+}
+
+.team-card:hover .card-content {
+  transform: translateY(0);
+}
+
+.team-card h3 {
+  margin: 0;
+  font-size: 18px;
+}
+
+.team-card .bio {
+  margin: 10px 0 0;
+  font-size: 14px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.team-card:hover .bio {
+  opacity: 1;
+}
+
+@media screen and (max-width: 600px) {
+  .bio {
+    opacity: 1 !important;
   }
-
-  .about-heading{
-    font-size: 42px;
-    color: var(--primary);
+  .team-card .card-content{
+    transform: translateY(0) !important;
   }
-
-  .about-para{
-    line-height: 2rem;
-  }
-
-  @media screen and (max-width: 600px) {
-    .about-card{
-      flex-direction: column;
-    }
-  }
-
-  /* Meet The Team */
-
-  .meet-banner{
-    background: url(./images/meet-banner.jpeg) no-repeat;
-    background-size: contain;
-    background-position: 50% 24%;
-  }
+}
