--- a/style.css
+++ b/style.css
@@ -538,73 +538,48 @@ footer ul li:hover {
 }
 
 .team-section {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  place-content: center;
+  gap: 3%;
+  padding: 50px 5%;
 }
 
 .team-card {
-  position: relative;
-  width: 550px;
-  height: 600px;
-  overflow: hidden;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s ease;
+  width: 100%;
   cursor: pointer;
 }
 
-.team-card img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.team-card img{
+  height: 500px;
 }
 
-.team-card .card-content {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: #fff;
-  padding: 20px;
-  transform: translateY(100%);
-  transition: transform 0.3s ease;
+.team-card p{
+  height: fit-content;
 }
 
-.team-card:hover .card-content {
-  transform: translateY(0);
-}
-
-.team-card h3 {
-  margin: 0;
-  font-size: 24px;
-}
-
-.team-card .bio {
-  margin: 10px 0 0;
+.bio{
   font-size: 14px;
-  opacity: 0;
-  transition: opacity 0.3s ease;
 }
 
-.team-card:hover .bio {
-  opacity: 1;
-}
 
-@media screen and (max-width: 600px) {
-  .bio {
-    opacity: 1 !important;
-    font-size: 12px !important;
-  }
-  .team-card .card-content{
-    transform: translateY(0) !important;
-  }
-
-  .team-card{
-    width: 100%;
-  }
+@media (min-width:641px) and (max-width: 1024px) {
   .team-section{
-    padding: 0 5%;
+    grid-template-columns: repeat(2,1fr);
+    padding: 10% 5%;
   }
+  .team-card img{
+    height: 400px;
+  }
+
+}
+@media screen and (max-width: 600px) {
+  .team-section{
+    grid-template-columns: repeat(1,1fr);
+    padding: 10% 5%;
+  }
+  .team-card img{
+    height: 400px;
+  }
+
 }
