--- a/style.css
+++ b/style.css
@@ -266,6 +266,8 @@ nav a:hover {
 .review-forth {
   display: flex;
   align-items: center;
+  margin-top: 10px;
+
 }
 
 .review-fifth {
@@ -551,11 +553,13 @@ footer ul li:hover {
 }
 
 .team-card img{
-  height: 500px;
+  width: 100%;
+  height: 400px;
 }
 
 .team-card p{
   height: fit-content;
+  opacity: 80%;
 }
 
 .bio{
@@ -572,6 +576,7 @@ footer ul li:hover {
     height: 400px;
   }
 }
+
 @media screen and (max-width: 600px) {
   .team-section{
     grid-template-columns: repeat(1,1fr);
@@ -588,4 +593,130 @@ footer ul li:hover {
   color: var(--primary);
   font-weight: 700;
   font-size: 20px;
+}
+
+
+/* Projects */
+
+.news {
+  padding: 20px;
+  background: #f7f7f7;
+  transition: all 100ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  transition: all 0.5s ease;
+  position: relative;
+}
+
+.news:hover {
+  background-color: #a8a8aa;
+}
+
+.news-arrow {
+  width: 30px;
+  display: none;
+  transform: rotate(90deg);
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  transition: all 0.5s ease;
+  filter: invert(1);
+}
+
+.news:hover .news-arrow {
+  display: block;
+}
+
+.news-date {
+  color: #abaaaa;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+.news-content {
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.news:hover .news-date {
+  color: #e9e9e9;
+}
+
+.news:hover .news-content {
+  color: #fff;
+}
+
+.bento {
+  padding: 0 30px;
+  display: grid;
+  grid-template-columns: repeat(8, 90px);
+  grid-template-rows: repeat(6, 90px);
+  gap: 20px;
+}
+
+/* Individual boxes */
+
+.news1 {
+  grid-column: span 4;
+  grid-row: span 2;
+}
+
+.news2 {
+  grid-column: span 4;
+  grid-row: span 3;
+}
+
+.news3 {
+  grid-column: span 4;
+  grid-row: span 2;
+}
+
+.news4 {
+  grid-column: span 4;
+  grid-row: span 2;
+}
+
+.links.active {
+  color: #a4a6a8; /* Example: blue color for active button */
+}
+
+/* Basic styling for news items */
+.news {
+  opacity: 0;
+  /* transform: translateY(20px); */
+  transition: opacity 0.5s ease, transform 0.5s ease;
+  display: none; /* Hidden by default */
+}
+
+/* Fade-in animation */
+.fade-in {
+  opacity: 1;
+  transform: translateY(0); /* Moves the element back to its original position */
+}
+
+/* Fade-out animation */
+.fade-out {
+  opacity: 0;
+  transform: translateY(20px); /* Moves the element down by 20px */
+}
+
+.links {
+  position: relative;
+  cursor: pointer;
+}
+
+.links::after {
+  content: "";
+  position: absolute;
+  background-color: rgb(19, 17, 17);
+  height: 2px;
+  width: 0%;
+  left: 0;
+  bottom: 0;
+  transition: width 0.5s;
+}
+
+.links:hover::after {
+  width: 100%;
 }
