--- a/style.css
+++ b/style.css
@@ -585,7 +585,6 @@ footer ul li:hover {
   .team-card img{
     height: 400px;
   }
-
 }
 
 
@@ -598,87 +597,15 @@ footer ul li:hover {
 
 /* Projects */
 
-.news {
-  padding: 20px;
-  background: #f7f7f7;
-  transition: all 100ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  transition: all 0.5s ease;
-  position: relative;
-}
-
-.news:hover {
-  background-color: #a8a8aa;
-}
-
-.news-arrow {
-  width: 30px;
-  display: none;
-  transform: rotate(90deg);
-  position: absolute;
-  bottom: 15px;
-  right: 15px;
-  transition: all 0.5s ease;
-  filter: invert(1);
-}
-
-.news:hover .news-arrow {
-  display: block;
-}
-
-.news-date {
-  color: #abaaaa;
-  font-weight: 400;
-  font-size: 14px;
-}
-
-.news-content {
-  font-size: 24px;
-  font-weight: 600;
-}
-
-.news:hover .news-date {
-  color: #e9e9e9;
-}
-
-.news:hover .news-content {
-  color: #fff;
-}
-
 .bento {
   padding: 0 30px;
   display: grid;
-  grid-template-columns: repeat(8, 90px);
-  grid-template-rows: repeat(6, 90px);
+  grid-template-columns: repeat(4, 1fr);
   gap: 20px;
 }
 
-/* Individual boxes */
-
-.news1 {
-  grid-column: span 4;
-  grid-row: span 2;
-}
-
-.news2 {
-  grid-column: span 4;
-  grid-row: span 3;
-}
-
-.news3 {
-  grid-column: span 4;
-  grid-row: span 2;
-}
-
-.news4 {
-  grid-column: span 4;
-  grid-row: span 2;
-}
-
 .links.active {
-  color: #a4a6a8; /* Example: blue color for active button */
+  color: #DFAA46; /* Example: blue color for active button */
 }
 
 /* Basic styling for news items */
@@ -687,6 +614,11 @@ footer ul li:hover {
   /* transform: translateY(20px); */
   transition: opacity 0.5s ease, transform 0.5s ease;
   display: none; /* Hidden by default */
+}
+
+.news img{
+  width: 300px;
+  height: 300px;
 }
 
 /* Fade-in animation */
@@ -709,8 +641,8 @@ footer ul li:hover {
 .links::after {
   content: "";
   position: absolute;
-  background-color: rgb(19, 17, 17);
-  height: 2px;
+  background-color: #DFAA46;
+  height: 1px;
   width: 0%;
   left: 0;
   bottom: 0;
@@ -719,4 +651,25 @@ footer ul li:hover {
 
 .links:hover::after {
   width: 100%;
+}
+
+@media (min-width:641px) and (max-width: 1024px) {
+  .bento{
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0;
+    place-items: center;
+   }
+}
+
+
+@media screen and (max-width: 600px) {
+ .bento{
+  grid-template-columns: repeat(2, 1fr);
+  padding: 0;
+  place-items: center;
+ }
+ .news img{
+  width: 170px;
+  height: 170px;
+ }
 }
