--- a/style.css
+++ b/style.css
@@ -267,7 +267,6 @@ nav a:hover {
   display: flex;
   align-items: center;
   margin-top: 10px;
-
 }
 
 .review-fifth {
@@ -541,7 +540,7 @@ footer ul li:hover {
 
 .team-section {
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(3, 1fr);
   place-content: center;
   gap: 3%;
   padding: 50px 5%;
@@ -552,48 +551,45 @@ footer ul li:hover {
   cursor: pointer;
 }
 
-.team-card img{
+.team-card img {
   width: 100%;
   height: 400px;
 }
 
-.team-card p{
+.team-card p {
   height: fit-content;
   opacity: 80%;
 }
 
-.bio{
+.bio {
   font-size: 14px;
 }
 
-
-@media (min-width:641px) and (max-width: 1024px) {
-  .team-section{
-    grid-template-columns: repeat(2,1fr);
+@media (min-width: 641px) and (max-width: 1024px) {
+  .team-section {
+    grid-template-columns: repeat(2, 1fr);
     padding: 10% 5%;
   }
-  .team-card img{
+  .team-card img {
     height: 400px;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .team-section{
-    grid-template-columns: repeat(1,1fr);
+  .team-section {
+    grid-template-columns: repeat(1, 1fr);
     padding: 10% 5%;
   }
-  .team-card img{
+  .team-card img {
     height: 400px;
   }
 }
 
-
-.h4{
+.h4 {
   color: var(--primary);
   font-weight: 700;
   font-size: 20px;
 }
-
 
 /* Projects */
 
@@ -605,7 +601,7 @@ footer ul li:hover {
 }
 
 .links.active {
-  color: #DFAA46; /* Example: blue color for active button */
+  color: #dfaa46; /* Example: blue color for active button */
 }
 
 /* Basic styling for news items */
@@ -614,9 +610,30 @@ footer ul li:hover {
   /* transform: translateY(20px); */
   transition: opacity 0.5s ease, transform 0.5s ease;
   display: none; /* Hidden by default */
+  position: relative;
 }
 
-.news img{
+.info {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: fit-content;
+  padding: 10px 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+
+.news:hover .info{
+  opacity: 1;
+}
+
+.news img {
   width: 300px;
   height: 300px;
 }
@@ -624,7 +641,9 @@ footer ul li:hover {
 /* Fade-in animation */
 .fade-in {
   opacity: 1;
-  transform: translateY(0); /* Moves the element back to its original position */
+  transform: translateY(
+    0
+  ); /* Moves the element back to its original position */
 }
 
 /* Fade-out animation */
@@ -641,7 +660,7 @@ footer ul li:hover {
 .links::after {
   content: "";
   position: absolute;
-  background-color: #DFAA46;
+  background-color: #dfaa46;
   height: 1px;
   width: 0%;
   left: 0;
@@ -653,26 +672,26 @@ footer ul li:hover {
   width: 100%;
 }
 
-@media (min-width:641px) and (max-width: 1024px) {
-  .bento{
+@media (min-width: 641px) and (max-width: 1024px) {
+  .bento {
     grid-template-columns: repeat(2, 1fr);
     padding: 0;
     place-items: center;
-   }
+  }
 }
 
 @media screen and (max-width: 600px) {
- .bento{
-  grid-template-columns: repeat(2, 1fr);
-  padding: 0;
-  place-items: center;
- }
- .news img{
-  width: 170px;
-  height: 170px;
- }
- .news video{
-  width: 170px;
-  height: 170px;
- }
+  .bento {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0;
+    place-items: center;
+  }
+  .news img {
+    width: 170px;
+    height: 170px;
+  }
+  .news video {
+    width: 170px;
+    height: 170px;
+  }
 }
