--- a/style.css
+++ b/style.css
@@ -615,7 +615,7 @@ footer ul li:hover {
 
 .info {
   position: absolute;
-  top: 0;
+  bottom: 0;
   right: 0;
   left: 0;
   height: fit-content;
@@ -623,7 +623,7 @@ footer ul li:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.4);
   color: white;
   opacity: 0;
   transition: all 0.3s ease;
@@ -687,11 +687,15 @@ footer ul li:hover {
     place-items: center;
   }
   .news img {
-    width: 170px;
-    height: 170px;
+    width: 200px;
+    height: 200px;
   }
   .news video {
-    width: 170px;
-    height: 170px;
+    width: 100%;
+    height: 200px;
+  }
+  .info{
+    opacity: 1;
+    font-size: 12px;
   }
 }
